# Rapid-Inbox

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  constraints-dev.txt  pyproject.toml  quickstart.sh  sqlite_schema.sql
.github/workflows/: release-ingestd.yml
app/: config.py  http_runner.py  main.py  runtime.py  smtp_runner.py
app/auth/: __init__.py  api_keys.py  passwords.py  permissions.py  sessions.py
app/db/: connection.py  writer.py
app/http/: admin_api.py  admin_views.py  pagination.py  public_api.py  public_views.py  sse.py  template_helpers.py
app/ingest/: queue.py  recovery.py  storage.py
app/services/: attachments.py  audit.py  dns_check.py  domains.py  mailboxes.py  messages.py  settings.py  verification_code.py
app/smtp/: handler.py  live_state.py  server.py
app/templates/admin/: _pagination.html  api_key_detail.html  api_keys.html  audit.html  base.html  dashboard.html  domain_detail.html  domains.html  live.html  login.html  mailbox_detail.html  mailboxes.html  message_detail.html  messages.html  settings.html
app/templates/public/: base.html  home.html  html_frame.html  mailbox.html  message.html
cpp/ingestd/: CMakeLists.txt  README.md
cpp/ingestd/src/: batch_writer.cpp  batch_writer.h  config.cpp  config.h  domain_cache.cpp  domain_cache.h  domain_matcher.cpp  domain_matcher.h  id.cpp  id.h  ingest_app.cpp  ingest_app.h  json_util.cpp  json_util.h  mail_job.h  mail_queue.cpp  mail_queue.h  main.cpp  parsed_mail.h  sha256.cpp  sha256.h  smtp_server.cpp  smtp_server.h  smtp_session.cpp  smtp_session.h  sqlite_db.cpp  sqlite_db.h  storage_path.cpp  storage_path.h  time_utils.cpp  time_utils.h  verification_code.cpp
cpp/ingestd/tests/: test_batch_writer.cpp  test_config.cpp  test_domain_cache.cpp  test_domain_matcher.cpp  test_mail_queue.cpp  test_main.cpp  test_smtp_server.cpp  test_smtp_session.cpp  test_sqlite_db.cpp  test_storage_utils.cpp  test_verification_code.cpp
docs/superpowers/plans/: 2026-04-18-rapid-inbox-v1.md  2026-05-13-cpp-full-mail-parser.md
docs/superpowers/specs/: 2026-04-18-rapid-inbox-v1-design.md  2026-05-12-cpp-ingestd-hybrid-design.md  2026-05-13-cpp-full-mail-parser-design.md
tests/: conftest.py  test_admin_api.py  test_admin_permissions.py  test_admin_views.py  test_auth.py  test_config.py  test_cpp_ingestd_integration.py  test_db_writer.py  test_dns_check.py  test_github_release_workflow.py  test_ingest_pipeline.py  test_live_sse.py  test_pagination.py  test_parse_queue.py  test_public_downloads.py  test_public_routes.py  test_quickstart_script.py  test_recovery.py  test_retention.py  test_smtp_delivery_formats.py  test_smtp_handler.py  test_smtp_stress_script.py  test_sse.py  test_verification_code.py
tools/: migrate_sqlite.py  smtp_stress_test.py
