[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid-inbox"
version = "0.1.0"
description = "Rapid Inbox MVP"
requires-python = ">=3.12"
dependencies = [
  "aiosmtpd==1.4.6",
  "dnspython==2.8.0",
  "fastapi==0.136.0",
  "jinja2==3.1.6",
  "uvicorn==0.44.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[project.scripts]
rapid-inbox-http = "app.http_runner:main"
rapid-inbox-smtp = "app.smtp_runner:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
