[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid-inbox"
version = "0.1.0"
description = "Local-first temporary inbox service with SMTP ingest, public mailboxes, an admin console, and HTTP APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dao", email = "wendao@ofoco.cn" },
]
keywords = [
  "email",
  "smtp",
  "inbox",
  "temporary-email",
  "fastapi",
  "sqlite",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "aiosmtpd==1.4.6",
  "dnspython==2.8.0",
  "fastapi==0.136.0",
  "jinja2==3.1.6",
  "uvicorn==0.44.0",
  "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "tomli==2.4.1; python_version < '3.11'",
]

[project.scripts]
rapid-inbox-http = "app.http_runner:main"
rapid-inbox-smtp = "app.smtp_runner:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "static/vendor/README.md",
  "templates/admin/*.html",
  "templates/public/*.html",
  "static/vendor/aos/*",
  "static/vendor/fonts/*",
  "static/vendor/lucide/*",
  "static/vendor/normalize/*",
  "static/vendor/typed/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
